--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "ext-json": "*",
+        "illuminate/redis": "^5.8",
         "laravel/lumen-framework": "5.8.*",
+        "ramsey/uuid": "^4.1",
         "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
